- corrected home page layout for medium screens - added alignment state in toggle - tweaked styling in various places - incomplete pagination

--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -42,10 +42,6 @@
   flex-direction: column;
   gap: 25px;
 }
-.detailsBanner .right {
-  color: black;
-  flex-grow: 1;
-}
 .detailsBanner .right .overview {
   margin-bottom: 25px;
   color: white;
